sniffHTTPSOnLO_V2/iptablesRules
# Generated by iptables-save v1.4.21 on Thu Oct 22 14:49:19 2015
*nat
:PREROUTING ACCEPT [36:2330]
:INPUT ACCEPT [1212:72890]
:OUTPUT ACCEPT [213:13100]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i enp0s8 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8080
-A PREROUTING -p tcp --dport 8081 -j DNAT --to-destination 127.0.0.1
-A OUTPUT -p tcp --dport 8081 -j DNAT --to-destination 127.0.0.1
-A POSTROUTING -o enp0s3 -j MASQUERADE
COMMIT
# Completed on Thu Oct 22 14:49:19 2015
# Generated by iptables-save v1.4.21 on Thu Oct 22 14:49:19 2015
*filter
:INPUT ACCEPT [1357:83498]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4050:1107124]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 8081 -j NFQUEUE
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j NFQUEUE
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A FORWARD -i enp0s3 -o enp0s8 -m state --state RELATED,ESTABLISHED -j NFQUEUE
-A FORWARD -i enp0s8 -o enp0s3 -j NFQUEUE
COMMIT
# Completed on Thu Oct 22 14:49:19 2015
